--- a/more.mdx
+++ b/more.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Just Testing again and again and again'
-date: '2023-04-28'
+title: 'Testing 🧪'
+date: '2023-08-10'
 tags: ['next.js','nextjs','new']
 ---
 
