--- a/react-setup-from-the-scratch.mdx
+++ b/react-setup-from-the-scratch.mdx
@@ -10,7 +10,7 @@ tags: ["react", "webpack", "babel", "typescript"]
 
 This knowledge empowers you to have more control over your project's configuration and gain a deeper understanding of the underlying technologies. In this blog post, I'll walk you through the process of creating a React app without using `create-react-app`.
 
-<Video id="v=63Z8-OyRloE" />
+<Video id="63Z8-OyRloE" />
 
 <h2>Prerequisites:</h2>
 Before we dive into creating a React app, make sure you have the following tools
