--- a/react-setup-from-the-scratch.mdx
+++ b/react-setup-from-the-scratch.mdx
@@ -8,9 +8,9 @@ tags: ["react", "webpack", "babel", "typescript"]
 
 [React](https://react.dev) has gained immense popularity in the web development community due to its simplicity and powerful capabilities for building user interfaces. While tools like [create-react-app](https://create-react-app.dev) make starting a React project quick and easy, it's essential to understand how to create a React app from scratch.
 
-This knowledge empowers you to have more control over your project's configuration and gain a deeper understanding of the underlying technologies. In this blog post, I'll walk you through the process of creating a React app without using `create-react-app`.
+This knowledge empowers you to have more control over your project's configuration and gain a deeper understanding of the underlying technologies. In this blog post, I'll walk you through the process of creating a React app without using **create-react-app**.
 
-<Video id="63Z8-OyRloE" />
+<Video id="63Z8-OyRloE?si=-lopkaKJPFcokiQQ" />
 
 <h2>Prerequisites:</h2>
 Before we dive into creating a React app, make sure you have the following tools
@@ -41,7 +41,7 @@ This command will create a "package.json" file that stores project metadata and 
 
 <h2>Step 3: Installing React and ReactDOM and TypeScript</h2>
 
-To use React, you need to install the following packages: `react`, `react-dom` and `typescript`.
+To use React, you need to install the following packages: **react**, **react-dom** and **typescript**.
 Run the following command to install them:
 
 ```bash
@@ -50,7 +50,7 @@ npm install react react-dom typescript @types/react @types/react-dom
 
 <h2>Step 4: Writing Your First React Component</h2>
 
-Now, it's time to create your first React component. Create a directory named `src` in your project's root directory and inside it, create an `index.tsx` file. This will be your app's entry point. Here's a simple example:
+Now, it's time to create your first React component. Create a directory named **src** in your project's root directory and inside it, create an **index.tsx** file. This will be your app's entry point. Here's a simple example:
 
 ```tsx
 import React, { FC, StrictMode } from "react";
@@ -70,8 +70,8 @@ root.render(
 
 <h2>Step 5: Creating an HTML File</h2>
 
-Create a directory named `public` in your project's root directory and inside of this directory
-create an `index.html`. This file will serve as the entry point for your React app:
+Create a directory named **public** in your project's root directory and inside of this directory
+create an **index.html**. This file will serve as the entry point for your React app:
 
 ```html
 <!DOCTYPE html>
@@ -95,7 +95,7 @@ React code is typically written using JSX/TSX, which needs to be transpiled into
 npm i babel-loader @babel/preset-env @babel/preset-react @babel/preset-typescript --save-dev
 ```
 
-Create a Babel configuration file named `.babelrc` in your project's root directory and add the following configuration:
+Create a Babel configuration file named **.babelrc** in your project's root directory and add the following configuration:
 
 ```json
 {
@@ -115,7 +115,7 @@ To bundle your React app, you need to set up Webpack. Install Webpack and relate
 npm install webpack webpack-cli webpack-dev-server html-webpack-plugin ts-loader --save-dev
 ```
 
-Create a Webpack configuration file named `webpack.config.js` in your project's root directory:
+Create a Webpack configuration file named **webpack.config.js** in your project's root directory:
 
 ```js
 const path = require("path");
@@ -164,7 +164,7 @@ You're now ready to start your development server:
 npx webpack serve
 ```
 
-Visit `http://localhost:3001` in your browser, and you should see your React app up and running.
+Visit **http://localhost:3001** in your browser, and you should see your React app up and running.
 
 <h2>Step 9: Create a prod build</h2>
 
@@ -174,6 +174,6 @@ npx webpack
 
 <h2>Conclusion:</h2>
 
-Creating a React app from scratch gives you a deeper understanding of how the different pieces of the React ecosystem fit together. While tools like `create-react-app` are convenient for quick prototypes, this manual setup allows you to have more control over your project's configuration and helps you learn the underlying technologies better. Happy coding!
+Creating a React app from scratch gives you a deeper understanding of how the different pieces of the React ecosystem fit together. While tools like **create-react-app** are convenient for quick prototypes, this manual setup allows you to have more control over your project's configuration and helps you learn the underlying technologies better. Happy coding!
 
-Source code for this tutorial can be found in my GitHub [repo](https://github.com/JanGanaCode/youtube/blob/main/react-from-the-scratch/webpack.config.js).
+<Socials sourceCodeLink="https://github.com/JanGanaCode/youtube/blob/main/react-from-the-scratch" />
