aws-account-setup.mdx

--- a/react-setup-from-the-scratch.mdx
+++ b/react-setup-from-the-scratch.mdx
@@ -1,5 +1,5 @@
 ---
-title: "React app setup from the scratch"
+title: "VIDEO: React app setup from the scratch"
 description: "Create React app from the scratch without using CRA"
 author: "Jan Gana"
 date: "2023-09-08"
@@ -10,7 +10,7 @@ tags: ["react", "webpack", "babel", "typescript"]
 
 This knowledge empowers you to have more control over your project's configuration and gain a deeper understanding of the underlying technologies. In this blog post, I'll walk you through the process of creating a React app without using **create-react-app**.
 
-<Video id="63Z8-OyRloE?si=-lopkaKJPFcokiQQ" />
+<Video id="63Z8-OyRloE" />
 
 <h2>Prerequisites:</h2>
 Before we dive into creating a React app, make sure you have the following tools
